--- a/assets/css/custom/custom-components/custom-tabs.css
+++ b/assets/css/custom/custom-components/custom-tabs.css
@@ -96,8 +96,4 @@
       display: none;
     }
   }
-
-  main {
-    max-height: calc(100dvh - var(--size-28));
-  }
 }
